[gd_scene load_steps=19 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/decay.png" type="Texture" id=3]
[ext_resource path="res://main/PalletSwap.gdshader" type="Shader" id=4]
[ext_resource path="res://characters/Spid.gd" type="Script" id=5]
[ext_resource path="res://art/spid.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/palette = 0
shader_param/palette_length = 4

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=30]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 31 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "corner",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "decay",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 30.0
}, {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 7, 2 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 2, 7 )

[node name="Spid" instance=ExtResource( 1 )]
position = Vector2( 127, 248 )
script = ExtResource( 5 )

[node name="AnimatedSprite" parent="." index="0"]
material = SubResource( 27 )
frames = SubResource( 30 )
animation = "corner"
frame = 0

[node name="TopTouch" type="Area2D" parent="." index="6"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopTouch" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 36 )

[node name="BottomTouch" type="Area2D" parent="." index="7"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomTouch" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 36 )

[node name="RightTouch" type="Area2D" parent="." index="8"]
collision_layer = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightTouch" index="0"]
position = Vector2( 8, 0 )
shape = SubResource( 35 )

[node name="LeftTouch" type="Area2D" parent="." index="9"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftTouch" index="0"]
position = Vector2( -8, 0 )
shape = SubResource( 35 )
